test/kubernetes/e2e/features/validation/testdata/transformation/vs-transform-extractors.yaml
# Don't set namespace, apply to test installation namespace
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: example-vs
spec:
  virtualHost:
    domains:
      - "example.com"
    routes:
      - matchers:
          - prefix: "/"
        routeAction:
          single:
            upstream:
              ref:
                name: nginx-upstream
    options:
      transformations:
        clearRouteCache: true
        responseTransformation:
          transformationTemplate:
            extractors:
              - key: "foo"
                value:
                  header: ":path"
                  regex: ".*"
                  subgroup: 1
            headers:
              - key: ":path"
                value:
                  text: "/"
