test/kubernetes/e2e/features/validation/testdata/transformation/vs-transform-single-replace.yaml
# Don't set namespace, apply to test installation namespace
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: example-vs
spec:
  virtualHost:
    domains:
      - "example.com"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: nginx-upstream
    options:
      transformations:
        clearRouteCache: true
        responseTransformation:
          transformationTemplate:
            extractors:
              foo:
                header: ":path"
                regex: ".*"
                subgroup: 1
                replacementText: "bar"
                mode: SINGLE_REPLACE
            headers:
              ":path":
                text: "/"
